# CppSOLID

./: .gitignore  README.md  prerequisites.txt  structure.txt
.github/workflows/: test.yml
presentations/: SOLID-C++.odp  intro.odp
presentations/DIP/: DIP-compliant.xmi  DIP-incompliant.xmi  DIP-lamp-better-example1.cpp  DIP-observer-better-example1.cpp  DIP-observer-better-example2.cpp  DIP.odp
presentations/DIP/plant-care/: CMakeLists.txt
presentations/DIP/plant-care/sensors/: CMakeLists.txt
presentations/ISP/: ISP-compliant-2.xmi  ISP-compliant.xmi  ISP-compliant2.xmi  ISP-door-better1.cpp  ISP-incompliant-2.xmi  ISP-incompliant.xmi  ISP-incompliant2.xmi  ISP-plant-care-example.cpp  ISP-printer-better-example.cpp  ISP.odp
presentations/ISP/plant-care/caretaker/: CMakeLists.txt
presentations/LSP/: LSP incomplient.xmi  LSP-classic-example.cpp  LSP-collection-better-example.cpp  LSP-covariance-example.cpp  LSP-string-example.cpp  LSP.odp
presentations/OCP/: OCP complient.xmi  OCP incomplient.xmi  OCP-compliant-decorator-dynamic.cpp  OCP-compliant-run-time-concept.cpp  OCP-compliant-template-concepts.cpp  OCP-compliant-template-specialization.cpp  OCP-incompliant.cpp  ocp.odp
presentations/SRP/: SRP-compliant.xmi  SRP-incompliant.xmi  srp.odp
presentations/UML/: UML-intro.odp  UML-intro.xmi
presentations/intro/: What-is-SOLID.odp  Why-C++.odp  why-c++.odp
project/: CMakeLists.txt  client.py  install_dependencies.sh  sequence-diagram.txt
project/app/: CMakeLists.txt
project/app/auth/: CMakeLists.txt
project/app/auth/include/auth/: AuthManager.hpp  IAuthentication.hpp  IAuthorization.hpp
project/app/auth/src/: AuthManager.cpp
project/app/common/: CMakeLists.txt
project/app/common/constants/: Constants.hpp
project/app/common/include/constants/: Constants.hpp
project/app/common/include/types/: Report.hpp  ReportFormat.hpp  User.hpp
project/app/common/src/types/: Report.cpp  ReportFormat.cpp  User.cpp
project/app/common/types/: Report.hpp  ReportFormat.hpp
project/app/configs/: CMakeLists.txt
project/app/configs/include/configs/: StartupConfig.hpp
project/app/configs/src/: StartupConfig.cpp
project/app/configs/ut/: CMakeLists.txt  StartupConfig_tests.cpp
project/app/interfaces/: CMakeLists.txt
project/app/interfaces/include/interfaces/parsers/: ICredentialsParser.hpp  IReportParser.hpp
project/app/main/: CMakeLists.txt  Main.cpp
project/app/mocks/: CMakeLists.txt
project/app/mocks/include/mocks/: AuthorizationMock.hpp  ReportParserMock.hpp
project/app/parsers/: CMakeLists.txt
project/app/parsers/include/parsers/: ICredentialsParser.hpp  IParsersFactory.hpp  IReportParser.hpp  JsonParser.hpp  JsonReportParser.hpp  ParsersFactory.hpp  ValidatedReportParser.hpp  XmlParser.hpp  XmlReportParser.hpp
project/app/parsers/src/: JsonParser.cpp  JsonReportParser.cpp  ParsersFactory.cpp  ValidatedReportParser.cpp  XmlParser.cpp  XmlReportParser.cpp
project/app/parsers/ut/: CMakeLists.txt  JsonParser_tests.cpp  JsonReportParser_tests.cpp  ValidatedReportParser_tests.cpp  XmlParser_tests.cpp  XmlReportParser_tests.cpp
project/app/servers/: CMakeLists.txt
project/app/servers/include/servers/: ReportSession.hpp  Server.hpp
project/app/servers/interfaces/services/: ITaxService.hpp  ITaxServiceFactory.hpp
project/app/servers/src/: ReportSession.cpp  Server.cpp
project/app/services/: CMakeLists.txt
project/app/services/include/services/: ITaxService.hpp  ITaxServiceFactory.hpp  TaxService.hpp  TaxServiceFactory.hpp
project/app/services/src/: TaxService.cpp  TaxServiceFactory.cpp
project/app/services/ut/: CMakeLists.txt  ReportParserMock.hpp  TaxService_tests.cpp
project/app/storage/: CMakeLists.txt
project/app/storage/include/storage/: ReportsStorage.hpp
project/app/storage/src/: ReportsStorage.cpp
project/server/: CMakeLists.txt  main.cpp
project/tests/: client.py
project/tests/sct/: tests.py
project/tests/ut/: CMakeLists.txt  dummy.cpp  main.cpp
stand-alone-examples/DIP/: DIP-lamp-better-example-static-polymorphism.cpp  DIP-lamp-example.cpp  DIP-observer-better-example-dynamic-polymorphism.cpp  DIP-observer-better-example-static-polymorphism.cpp  DIP-observer-example.cpp
stand-alone-examples/DIP/plant-care/caretaker/: CMakeLists.txt
stand-alone-examples/DIP/plant-care/caretaker/include/caretaker/: AloeCaretaker.hpp
stand-alone-examples/DIP/plant-care/caretaker/src/: CactusCaretaker.cpp
stand-alone-examples/DIP/plant-care/main/: CMakeLists.txt
stand-alone-examples/ISP/: ISP-door-better-example-adapter-pattern.cpp  ISP-door-example.cpp  ISP-multiple-inheritance-problems.cpp  ISP-printer-example.cpp
stand-alone-examples/ISP/plant-care-better/: CMakeLists.txt
stand-alone-examples/ISP/plant-care-better/caretaker/src/: AloeCaretaker.cpp
stand-alone-examples/ISP/plant-care-better/sensors/: CMakeLists.txt
stand-alone-examples/ISP/plant-care-better/sensors/include/sensors/: SunlightSensor.hpp
stand-alone-examples/ISP/plant-care-better/sensors/src/: MoistureSensor.cpp
stand-alone-examples/ISP/plant-care-worse/caretaker/: CMakeLists.txt
stand-alone-examples/ISP/plant-care-worse/caretaker/include/caretaker/: AbstractPlantCaretaker.hpp  AloeCaretaker.hpp
stand-alone-examples/ISP/plant-care-worse/main/: main.cpp
stand-alone-examples/ISP/plant-care/main/: main.cpp
stand-alone-examples/LSP/: LSP-ORM-queryset-example.cpp  LSP-animal-better-example.cpp  LSP-animal-example.cpp  LSP-classic-better-example.cpp  LSP-collection-example.cpp  LSP-storage-example.cpp
stand-alone-examples/OCP/: OCP-compliant-decorator-static.cpp  OCP-compliant-template-method.cpp  OCP-compliant-template.cpp  OCP-compliant.cpp  OCP-composition-over-inheritance.cpp
stand-alone-examples/SRP/: editor-example.cpp  plant-care-example.cpp
stand-alone-examples/SRP/plant-care/caretaker/: CMakeLists.txt
stand-alone-examples/SRP/plant-care/caretaker/include/caretaker/: PlantCaretaker.hpp
stand-alone-examples/SRP/plant-care/caretaker/src/: PlantCaretaker.cpp
stand-alone-examples/SRP/plant-care/main/: main.cpp
(+17 files in other folders)
